--- a/Tankogeddon/Config/DefaultEngine.ini
+++ b/Tankogeddon/Config/DefaultEngine.ini
@@ -125,3 +125,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.StreamingSettings]
+s.AsyncLoadingThreadEnabled=False
+
